src/ui/features/environments/tests/snapshots/terraleph__ui__features__environments__tests__matrix__row_groups__multi_demo_compare_narrow_40x16.snap
---
source: src/ui/features/environments/tests/matrix.rs
assertion_line: 1701
expression: buffer_visual_snapshot(&narrow_buffer)
---
40x16
row 0: 0..40 fg=Reset bg=Reset modifier=NONE text="terraleph ▸ dev                terraform"
row 1: 0..3 fg=Cyan bg=Reset modifier=NONE text="┌* " | 3..14 fg=Reset bg=Reset modifier=BOLD text="[2] Compare" | 14..40 fg=Cyan bg=Reset modifier=NONE text="─────────────────────────┐"
row 2: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..39 fg=DarkGray bg=Reset modifier=NONE text="                                      " | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 3: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..39 fg=Yellow bg=Reset modifier=NONE text="                                      " | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 4: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..39 fg=Reset bg=Reset modifier=NONE text="Address             dev        why    " | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 5: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..39 fg=Reset bg=Reset modifier=NONE text="                                      " | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 6: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..20 fg=Reset bg=Reset modifier=BOLD text="Differs across envs" | 20..38 fg=Reset bg=Reset modifier=NONE text="                  " | 38..39 fg=Rgb(80, 82, 94) bg=Reset modifier=NONE text="▲" | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 7: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..21 fg=Reset bg=Reset modifier=NONE text="  …orm_data.dev_only" | 21..31 fg=Green bg=Reset modifier=NONE text="+         " | 31..38 fg=Reset bg=Reset modifier=NONE text=" only i" | 38..39 fg=Rgb(192, 184, 176) bg=Reset modifier=NONE text="┃" | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 8: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..38 fg=Reset bg=Reset modifier=NONE text="                                     " | 38..39 fg=Rgb(192, 184, 176) bg=Reset modifier=NONE text="┃" | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 9: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..3 fg=Reset bg=Reset modifier=NONE text="> " | 3..4 fg=Reset bg=Reset modifier=BOLD text="▾" | 4..5 fg=Reset bg=Reset modifier=NONE text=" " | 5..21 fg=Reset bg=Reset modifier=BOLD text="Same: 2 patterns" | 21..38 fg=Reset bg=Reset modifier=NONE text="  Space collapse " | 38..39 fg=Rgb(80, 82, 94) bg=Reset modifier=NONE text="│" | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 10: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..38 fg=Reset bg=Reset modifier=NONE text="    [unknown values] · counts differ " | 38..39 fg=Rgb(192, 184, 176) bg=Reset modifier=NONE text="▼" | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 11: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..39 fg=Reset bg=Reset modifier=NONE text="Rows match by address · blank: absent " | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 12: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..39 fg=Reset bg=Reset modifier=NONE text=".: unchanged   ?: plan unavailable    " | 39..40 fg=Cyan bg=Reset modifier=NONE text="│"
row 13: 0..40 fg=Cyan bg=Reset modifier=NONE text="└──────────────────────────────────────┘"
row 14: 0..5 fg=Yellow bg=Reset modifier=NONE text="Space" | 5..14 fg=Reset bg=Reset modifier=NONE text=" collapse" | 14..17 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 17..18 fg=Yellow bg=Reset modifier=NONE text="v" | 18..28 fg=Reset bg=Reset modifier=NONE text=" full plan" | 28..31 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 31..32 fg=Yellow bg=Reset modifier=NONE text="[" | 32..33 fg=DarkGray bg=Reset modifier=NONE text="/" | 33..34 fg=Yellow bg=Reset modifier=NONE text="]" | 34..40 fg=Reset bg=Reset modifier=NONE text=" env  "
row 15: 0..1 fg=Yellow bg=Reset modifier=NONE text="f" | 1..2 fg=DarkGray bg=Reset modifier=NONE text="/" | 2..5 fg=Yellow bg=Reset modifier=NONE text="Esc" | 5..13 fg=Reset bg=Reset modifier=NONE text=" restore" | 13..16 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 16..17 fg=Yellow bg=Reset modifier=NONE text="?" | 17..22 fg=Reset bg=Reset modifier=NONE text=" help" | 22..25 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 25..26 fg=Yellow bg=Reset modifier=NONE text="q" | 26..40 fg=Reset bg=Reset modifier=NONE text=" quit         "
