src/ui/features/environments/tests/snapshots/terraleph__ui__features__environments__tests__matrix__row_groups__multi_demo_compare_same_closed_165x50.snap
---
source: src/ui/features/environments/tests/matrix.rs
assertion_line: 1614
expression: buffer_visual_snapshot(&collapsed)
---
165x50
row 0: 0..165 fg=Reset bg=Reset modifier=NONE text="terraleph ▸ dev                                                                                                                                             terraform"
row 1: 0..3 fg=Cyan bg=Reset modifier=NONE text="┌* " | 3..14 fg=Reset bg=Reset modifier=BOLD text="[2] Compare" | 14..165 fg=Cyan bg=Reset modifier=NONE text="──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
row 2: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=DarkGray bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 3: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Yellow bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 4: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..49 fg=Reset bg=Reset modifier=NONE text="Address                                         " | 49..51 fg=DarkGray bg=Reset modifier=NONE text="│ " | 51..87 fg=Reset bg=Reset modifier=NONE text="dev         stg         prod        " | 87..89 fg=DarkGray bg=Reset modifier=NONE text="│ " | 89..164 fg=Reset bg=Reset modifier=NONE text="why                                                                        " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 5: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=DarkGray bg=Reset modifier=NONE text="────────────────────────────────────────────────┼─────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────" | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 6: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..20 fg=Reset bg=Reset modifier=BOLD text="Differs across envs" | 20..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 7: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..49 fg=Reset bg=Reset modifier=NONE text="  terraform_data.dev_only                       " | 49..51 fg=DarkGray bg=Reset modifier=NONE text="│ " | 51..63 fg=Green bg=Reset modifier=NONE text="+           " | 63..87 fg=Reset bg=Reset modifier=NONE text="                        " | 87..89 fg=DarkGray bg=Reset modifier=NONE text="│ " | 89..164 fg=Reset bg=Reset modifier=NONE text="only in dev                                                                " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 8: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 9: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..3 fg=Reset bg=Reset modifier=NONE text="> " | 3..4 fg=Reset bg=Reset modifier=BOLD text="▸" | 4..5 fg=Reset bg=Reset modifier=NONE text=" " | 5..40 fg=Reset bg=Reset modifier=BOLD text="Same change across envs: 2 patterns" | 40..164 fg=Reset bg=Reset modifier=NONE text="  Space expand                                                                                                              " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 10: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="    [unknown values] · instance counts differ                                                                                                                      " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 11: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 12: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 13: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 14: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 15: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 16: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 17: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 18: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 19: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 20: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 21: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 22: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 23: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 24: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 25: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 26: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 27: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 28: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 29: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 30: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 31: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 32: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 33: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 34: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 35: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 36: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 37: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 38: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 39: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 40: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 41: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 42: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 43: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 44: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 45: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                   " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 46: 0..1 fg=Cyan bg=Reset modifier=NONE text="│" | 1..164 fg=Reset bg=Reset modifier=NONE text="Rows match by address · blank: absent   .: unchanged   ?: plan unavailable                                                                                         " | 164..165 fg=Cyan bg=Reset modifier=NONE text="│"
row 47: 0..165 fg=Cyan bg=Reset modifier=NONE text="└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
row 48: 0..1 fg=Yellow bg=Reset modifier=NONE text="v" | 1..11 fg=Reset bg=Reset modifier=NONE text=" full plan" | 11..14 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 14..15 fg=Yellow bg=Reset modifier=NONE text="/" | 15..22 fg=Reset bg=Reset modifier=NONE text=" filter" | 22..25 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 25..30 fg=Yellow bg=Reset modifier=NONE text="Space" | 30..46 fg=Reset bg=Reset modifier=NONE text=" expand selected" | 46..49 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 49..50 fg=Yellow bg=Reset modifier=NONE text="[" | 50..51 fg=DarkGray bg=Reset modifier=NONE text="/" | 51..52 fg=Yellow bg=Reset modifier=NONE text="]" | 52..56 fg=Reset bg=Reset modifier=NONE text=" env" | 56..59 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 59..60 fg=Yellow bg=Reset modifier=NONE text="f" | 60..61 fg=DarkGray bg=Reset modifier=NONE text="/" | 61..64 fg=Yellow bg=Reset modifier=NONE text="Esc" | 64..72 fg=Reset bg=Reset modifier=NONE text=" restore" | 72..75 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 75..76 fg=Yellow bg=Reset modifier=NONE text="?" | 76..81 fg=Reset bg=Reset modifier=NONE text=" help" | 81..84 fg=Rgb(192, 184, 184) bg=Reset modifier=NONE text=" | " | 84..85 fg=Yellow bg=Reset modifier=NONE text="q" | 85..165 fg=Reset bg=Reset modifier=NONE text=" quit                                                                           "
row 49: 0..165 fg=Reset bg=Reset modifier=NONE text="                                                                                                                                                                     "
